2006-07-20 nowel, yonekawa(S2Dao.PHP5-1.1.0)
    
    * add: S2Dao_Standard::usableLimitOffsetQuery() 
           S2Dao_MySQL::usableLimitOffsetQuery() 
           S2Dao_PostgresSQL::usableLimitOffsetQuery() 
        -  DBMSでLimit,Offset句が使用可能かを返します
    * fix: IN句を含むSQLコメントが正しく処理されない不具合を修正しました。

2006-07-19 nowel(S2Dao.PHP5-1.1.0)

    * fix: QUERYアノテーション時に"order by"句を先頭に指定するとPDOExceptionが発生する不具合を修正しました。
    * fix: findコマンド使用時とQUERYアノテーションの動作がマッチしていない不具合を修正しました。

2006-07-18 nowel(S2Dao.PHP5-1.1.0)

    * fix: S2Dao_AbstractBeanMetaDataResultSetHandler, S2Dao_BeanMetaDataResultSetHandler
        - 一部のプロパティとSQL分の大小文字判別にstrcasecmpを使うようにしました。

2006-07-17 nowel(S2Dao.PHP5-1.1.0)

    * fix[DAOPHP-3]: PDOトランザクションが正しく発行されない不具合を修正しました。

2006-07-14 nowel(S2Dao.PHP5-1.1.0)

    * fix[DAOPHP-5]: S2Dao_BasicHandler
    	    - PHP5.1.3 以降及び PDO 1.0.3以降の場合にPDO::ATTR_EMULATE_PREPARES, trueをセットするようにしました。
    * fix: S2Dao_BasicSelectHandler
        - S2Dao_BasicStatementFactoryが正しくセットされない不具合を修正しました。

2006-07-13  yonekawa(S2Dao.PHP5-1.1.0)

    * fix: S2PagerでuseLimitOffsetQueryプロパティをtrueにした時に、Countが取得できない不具合を修正しました。

2006-07-11 nowel(S2Dao.PHP5-1.1.0)

    * add: ResultSetHandler
        - extension/db/impl/S2Dao_AbstractBeanResultSetHandler
        - extension/db/impl/S2Dao_AbstractMapResultSetHandler
    	    - extension/db/impl/S2Dao_MapResultSetHandller
        - extension/db/impl/S2Dao_MapListResultSetHandler
        - extension/db/impl/S2Dao_BeanResultSetHandler
        - extension/db/impl/S2Dao_BeanListResultSetHandler
    * add: S2Dao_BasicStatementFactory::createStatement return PDOStatement of PDO::query()
    * modify: S2Dao_BasicResultSetFactory::create returns S2Dao_ObjectResultSetHandler
    * modify: S2Dao_ResultSetHandler::handler(PDOStatement $resultset)
        - dao/resultset/S2Dao_BeanArrayMetaDataResultSetHandler
        - dao/resultset/S2Dao_BeanMetaDataResultSetHandler
        - dao/resultset/S2Dao_BeanListMetaDataResultSetHandler