@@ -1,5 +1,6 @@
 2006-07-20 nowel, yonekawa(S2Dao.PHP5-1.1.0)
     
+    * rename: S2Dao_PagerResultSetWrapperImpl -> S2Dao_PagerBasicResultSetWrapper
     * add: S2Dao_Standard::usableLimitOffsetQuery() 
            S2Dao_MySQL::usableLimitOffsetQuery() 
            S2Dao_PostgresSQL::usableLimitOffsetQuery() 
